# gh-labels-cli

./: Cargo.toml  changelog.md  readme.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
src/: cli.rs  error.rs  file.rs  main.rs  util.rs
src/cli/: config.rs  create.rs  integration.rs  mod.rs  update.rs
src/cli/api/: create.rs  export.rs  mod.rs  update.rs
src/extension/: label_already_exists.rs  mod.rs  repo_not_found.rs
