[package]
authors = ["SirWindfield <SirWindfield@users.noreply.github.com>"]
description = "A CLI for managing GitHub labels in existing repositories"
edition = "2018"
license = "Apache-2.0 OR the MIT"
name = "gh-labels-cli"
version = "0.0.0"

[dependencies]
serde = "1.0.124"
serde_json = "1.0.64"
terminal-emoji = "0.2.5"
terminal-spinners = "0.1.0"
