[package]
authors = ["SirWindfield <SirWindfield@users.noreply.github.com>"]
default-run = "gh-labels"
description = "A CLI for managing GitHub labels in existing repositories"
repository = "https://github.com/SirWindfield/gh-labels-cli"
edition = "2018"
license = "Apache-2.0 OR MIT"
name = "gh-labels-cli"
version = "0.1.9"

[[bin]]
name = "gh-labels"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-alpha.2"
color-eyre = "0.5.11"
directories-next = "2.0.0"
edit = "0.1.3"
eyre = "0.6.5"
futures = "0.3.16"
git2 = { version = "0.13.20", features = ["vendored-openssl"] }
hubcaps = { version = "0.6.2", features = ["rustls-tls"], default-features = false }
serde = "1.0.126"
serde_json = "1.0.64"
terminal-link = "0.1.0"
terminal-log-symbols = "0.1.6"
terminal-spinners = "0.3.1"
thiserror = "1.0.25"
tokio = { version = "0.2", features = ["macros"] }
url = "2.2.2"
